--- a/cpp-project/www/exercicio1.html
+++ b/cpp-project/www/exercicio1.html
@@ -1,7 +1,16 @@
 <html>
     <head>
-        <title>IDE repl.it!</title>
+        <title>Snippet!</title>
     </head>
     <body>
-  <iframe src=<iframe src="https://paiza.io/projects/e/jJOfOGBdqnHEpROqYaECIg?theme=twilight" width="100%" height="500" scrolling="no" seamless="seamless"></iframe>
+  <iframe src="https://tech.io/snippet-widget/M5f71EZ" width="100%" frameborder="0" scrolling="no" allowtransparency="true" style="visibility: hidden">
+</iframe>
+<script>
+  if (typeof window.techioScriptInjected === 'undefined') {
+    window.techioScriptInjected = true;
+    var script = document.createElement('script');
+    script.src = 'https://files.codingame.com/codingame/iframe-v-1-4.js';
+    (document.head || document.body).appendChild(script);
+  }
+</script>
 </html>
